# fx-pro-bot

./: .dockerignore  .env.example  .gitignore  AI_TRADER_PROPOSAL_ALPHA_ARENA.md  AI_TRADER_PROPOSAL_DISCRETIONARY.md  AUDIT_2026.md  BUILDLOG.md  BUILDLOG_AI_ARENA.md  BUILDLOG_AI_FX_TRADER.md  BUILDLOG_AI_TRADER.md  BUILDLOG_BYBIT.md  BUILDLOG_PREDICTIONS.md  BUILDLOG_SCALP.md  BYBIT_AB_TEST.md  Dockerfile  Dockerfile.ai-arena  Dockerfile.ai-trader  Dockerfile.bybit  Dockerfile.ctrader-token-service  Dockerfile.fx-ai-trader  Dockerfile.fx-ai-trend  Dockerfile.scalp-bot  LICENSE  MIGRATION_AI_ARENA_TO_REAL_MONEY.md  NEXT_PHASE_AI_FX_TRADER.md  PREDICTIONS.md  README.md  STRATEGIES.md  docker-compose.yml  pyproject.toml
data/: cof_eval_out.txt  cof_oos_out.txt  cof_weekly_out.txt  ctrader_tokens.json  events_calendar.yaml  gold_data_validation_out.txt  gold_orb_f1_f2_shadow_audit.csv  gold_orb_f1_f2_shadow_audit_fixed_out.txt  gold_orb_f1_f2_shadow_audit_full_out.txt  gold_orb_f1_f2_shadow_audit_out.txt  gold_orb_filters_out.txt  gold_orb_h1_h5_enriched_wick.csv  gold_orb_h1_h5_explore_out.txt  gold_orb_h1_h5_test_out.txt  gold_orb_h1_h5_test_report.txt  gold_orb_h1_h5_wick_out.txt  gold_orb_h4_close_confirm_enriched.csv  gold_orb_h4_close_confirm_out.txt  gold_orb_late_entry_grid.csv  gold_orb_late_entry_out.txt  gold_orb_late_entry_trades.csv  gold_orb_session_guard_out.txt  gold_orb_trail_compare.csv  gold_orb_trail_compare_out.txt  gold_orb_trail_speedup.csv  gold_orb_trail_speedup_out.txt  mine_duo_short_out.txt  mine_ensembles_out.txt  mine_patterns_out.txt  (+1 more)
(+369 files in other folders)
