[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fx-pro-bot"
version = "0.5.0"
description = "Сканер-советник: ансамбль + Leaders copy-trading + Outsiders extreme + Shadow analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "yfinance>=0.2.40",
  "requests>=2.31",
  "cot-reports>=0.1",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
fx-pro-bot = "fx_pro_bot.app.main:main"
fx-pro-stats = "fx_pro_bot.app.stats_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fx_pro_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
